changed the word luxury to exclusive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 Luxury Cars. All Rights Reserved</p>
+        <p>&copy; 2025 Exclusive Cars. All Rights Reserved</p>
     </footer>
     
     <script src="scrpt.js"></script>
